src/objects/Assignment_History__c.object
<CustomObject>
    <description>CSP-1851 | this object is used to track the history of how Lead/Account assignment rules are assigning records to users</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CSP-1851</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Assignment History</relationshipLabel>
        <relationshipName>Assignment_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_Distribution_Queue_Id__c</fullName>
        <description>The Queue Id which was used to assign a Lead to the specified Queue in the system.</description>
        <label>Lead Distribution Queue Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Is_Converted__c</fullName>
        <description>CSP-1851</description>
        <formula>Lead__r.IsConverted</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Is Converted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CSP-1851</description>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Assignment History</relationshipLabel>
        <relationshipName>Assignment_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Local_Sales_Rep_Assignment__c</fullName>
        <description>CSP-1851</description>
        <label>Local Sales Rep Assignment</label>
        <referenceTo>Local_Sales_Rep_Assignment__c</referenceTo>
        <relationshipLabel>Assignment History</relationshipLabel>
        <relationshipName>Assignment_History</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CSP-1851</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Assignment_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Assignment History</label>
    <nameField>
        <displayFormat>AH-{0000000000}</displayFormat>
        <label>Assignment History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assignment History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>